--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="project-tile hidden">
             <div class="project-desc">
                 <h2>
-                    Hungery mouse game
+                    Hungry mouse game
                 </h2>
                 <p>Hungry Mouse: A whimsical 2D adventure crafted with Pygame, offering delightful fun.
                     Join a daring mouse on a cheese quest for its adorable, hungry baby mouse across three quirky worlds. Dodge traps and outsmart the mischievous cat for a thrilling journey!</p>
