Refactor front-end and back-end development descriptions for clarity and conciseness

--- a/index.html
+++ b/index.html
@@ -137,11 +137,7 @@
                 </div>
                 <div class="desc-container">
                     <h2>Front-end development</h2>
-                    <p>Crafting visually stunning and responsive websites with a focus on seamless user experiences.
-                        From
-                        intuitive navigation to pixel-perfect design, I bring your web visions to life using the latest
-                        in
-                        HTML, CSS, and JavaScript frameworks.</p>
+                    <p>Crafting visually stunning and responsive websites with a focus on seamless user experiences. From intuitive navigation to pixel-perfect design, I bring your web visions to life using the latest in HTML, CSS, and JavaScript techniques.</p>
                     <div>
                         <h3 class="skill-button">HTML</h3>
                         <h3 class="skill-button">CSS</h3>
@@ -155,10 +151,7 @@
                 </div>
                 <div class="desc-container">
                     <h2>Back-end development</h2>
-                    <p>Building robust and scalable server-side applications that power your website or web app. I
-                        specialize in creating secure and efficient databases, APIs, and server-side logic using the
-                        latest
-                        in back-end technologies.</p>
+                    <p>Building robust and scalable server-side applications that power your website or web app. I specialize in creating secure and efficient databases, APIs, and server-side logic using the latest back-end technologies.</p>
                     <div>
                         <h3 class="skill-button">PHP (Laravel)</h3>
                         <h3 class="skill-button">Python (Django)</h3>
