added vuejs skill

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                     <h2>Front-end development</h2>
                     <p>Crafting visually stunning and responsive websites with a focus on seamless user experiences. From intuitive navigation to pixel-perfect design, I bring your web visions to life using the latest in HTML, CSS, and JavaScript techniques.</p>
                     <div>
+                        <h3 class="skill-button">Vue.js</h3>
                         <h3 class="skill-button">HTML</h3>
                         <h3 class="skill-button">CSS</h3>
                         <h3 class="skill-button">JavaScript</h3>
