Refactored skills section in index.html and add Vue.js skill

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
                 <div class="desc-container">
                     <h2>Front-end development</h2>
-                    <p>Crafting visually stunning and responsive websites with a focus on seamless user experiences. From intuitive navigation to pixel-perfect design, I bring your web visions to life using the latest in HTML, CSS, and JavaScript techniques.</p>
+                    <p>Crafting visually stunning, responsive websites with a focus on seamless user experiences. From intuitive navigation to pixel-perfect design, I bring your web visions to life using the latest in HTML, CSS, and JavaScript. With expertise in Vue.js, I create dynamic, component-driven applications that are efficient, maintainable, and scalable, ensuring your projects stay future-proof and adaptable to evolving needs.</p>
                     <div>
                         <h3 class="skill-button">Vue.js</h3>
                         <h3 class="skill-button">HTML</h3>
